<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--app name-->
    <string name="app_name">WaiTech Solution</string>

    <!--bottom navigation menu name-->
    <string name="title_nav_recent">Recent</string>
    <string name="title_nav_category">Learn</string>
    <string name="title_nav_page">Page</string>
    <string name="title_nav_favorite">Favorite</string>

    <string name="press_again_to_exit">Press again to exit</string>

    <!--network & error message-->
    <string name="whops">Whoops!</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">There is a problem with your network or the server is down now, please try again later.</string>
    <string name="no_category_found">There doesn\'t seem to be a category available at the moment.</string>
    <string name="no_search_found">Search not found! if you want to continue the search, please try entering another keyword!</string>
    <string name="msg_no_item">There doesn\'t seem to be any content available at the moment.</string>
    <string name="msg_search_input">Please insert keyword!</string>
    <string name="btn_retry">RETRY</string>
    <string name="dialog_option_ok">OK</string>

    <!--favorite-->
    <string name="favorite_add">Add to favorite</string>
    <string name="favorite_remove">Article Remove from favorite</string>
    <string name="msg_favorite_added">Article Added to favorite</string>
    <string name="msg_favorite_removed">Article Removed from favorite</string>
    <string name="no_favorite_found">Your favorite list is empty.</string>

    <!--action menu name-->
    <string name="title_menu_favorite">Favorite</string>
    <string name="title_menu_share">Share</string>
    <string name="title_menu_search">Search</string>
    <string name="title_menu_more">More</string>
    <string name="title_menu_font_size">Font Size</string>
    <string name="title_menu_launch">View on Site</string>
    <string name="search_hint">Search&#8230;</string>

    <!--font size name -->
    <string name="title_dialog_font_size">Select Font Size</string>
    <string name="font_size_xsmall">Extra Small</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_xlarge">Extra Large</string>

    <!--share-->
    <string name="share_text">I would like to share this technlogy app with you. Here you can download it app on Google Play</string>
    <string name="txt_related">You may also like</string>

    <!--settings and others-->
    <string name="txt_title_settings">Settings</string>
    <string name="title_setting_theme">Dark Mode</string>
    <string name="sub_title_setting_theme">Better eyesight and power saving</string>
    <string name="sub_title_setting_about">App info  &amp; build version</string>
    <string name="msg_please_wait">Please wait&#8230;</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_about_version">Version</string>
    <string name="msg_no_more_apps">Whoops, No more apps currently available</string>
    <string name="content_description">TODO</string>

    <!--settings and others-->
    <string name="title_setting_text_size">Text Size</string>
    <string name="sub_title_setting_text_size">Preferred text size for posts description</string>
    <string name="title_setting_notification">Push Notification</string>
    <string name="sub_title_setting_notification">Manage push notification settings</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="sub_title_setting_privacy">App Privacy Policy</string>
    <string name="title_setting_terms">Terms &amp; Conditions</string>
    <string name="sub_title_setting_terms">App Terms &amp; Conditions</string>
    <string name="title_setting_clear_search">Clear search history</string>
    <string name="sub_title_setting_clear_search">Remove searches you have performed from this app</string>
    <string name="title_setting_publisher">Publisher Info</string>
    <string name="sub_title_setting_publisher">Publisher &amp; editorial information of this app</string>
    <string name="title_setting_rate">Rate us</string>
    <string name="title_setting_more_apps">More apps</string>
    <string name="title_setting_copyright">Copyright</string>
    <string name="sub_title_setting_copyright">Copyright © 2022 WaiTech Developer. All Right Reserved</string>
    <string name="title_setting_about">About</string>
    <string name="msg_about_version">Version</string>
    <string name="title_menu_browser">Open In Browser</string>

</resources>