<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_font_size"
        android:title="@string/title_menu_font_size"
        android:icon="@drawable/ic_menu_font_size"
        app:showAsAction="always"  />

    <item android:id="@+id/action_share"
        android:title="@string/title_menu_share"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="always"  />

    <item android:id="@+id/action_favorite"
        android:title="@string/title_menu_favorite"
        android:icon="@drawable/ic_menu_favorite_outline"
        app:showAsAction="always"  />

    <item android:id="@+id/action_launch"
        android:title="@string/title_menu_launch"
        android:icon="@drawable/ic_menu_launch"
        app:showAsAction="always"  />

</menu>
